--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
    <!-- /top menu-->
      <!-- main container -->   
   <div class="main-container">
-     <div class="anonce"><b>PL</b> Nasze targi bożonarodzeniowe przeniosły się do internetu. Zostało nam troszkę wspaniałych i niepowtarzalnych ręcznie robionych ozdób, jak i prezentów. Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!<br/>
-Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonki</b> naszego sztabu.
-<br/>Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.
-          <p><b><span class="red">!&nbsp;</span>Zanim opłacą Państwo dany towar ogromna prośba o kontakt <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, <nobr>+7 915 2007192 (Bogna),</nobr> <nobr>+7 925 3205824 (Ania)</nobr> — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</b><br/>
-              Projekt działa dzięki pracy wolontariuszy, nie jesteśmy sklepem internetowym z kurierami, ale dołożymy wszelkich starań, żeby sprzedać wszystkie towary.<br/>
-              Opłata za towary przed dostawą za pośrednictwem <b>eSkarbonki</b> naszego sztabu (Visa, Mastercard, Maestro)</p>
+     <div class="anonce"><b>PL</b>Przedstawiamy dzieła moskiewskich Polek, przygotowane z miłością dla wsparcia celów 30 Finału: niepowtarzalne ręcznie robione ozdoby świąteczne i prezenty. Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!
+Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
+Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
+<p><span class="red">!&nbsp;</span>Zanim opłacą Państwo dany towar ogromna prośba o kontakt wosp.moskwa@gmail.com, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</p>
+<p>Projekt działa dzięki pracy wolontariuszy, nie jesteśmy sklepem internetowym z kurierami, ale dołożymy wszelkich starań, żeby przekazać Państwu wszystkie towary w krótkim czasie.</p>
+<p>Opłata za towary przed dostawą za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal)</p>
           
           <p><b>RU</b> Наша рождественская ярмарка переехала в интернет. У нас осталось немного чудесных и неповторимых украшений и подарков ручной работы. Дорогие Дедушки Морозы, совместите приятное с полезным!<br/>
 Сердечно приглашаем за онлайн-покупками, оплата через <b>eSkarbonka</b> нашего штаба.<br/>
@@ -69,7 +69,7 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
         Оплата покупок через <b>eSkarbonka</b> нашего штаба.  </p> 
               
     <div class="br"></div>
-          <!--a href="https://eskarbonka.wosp.org.pl/vyhqkk" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/><b>eSkarbonka</b> обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).                       
+          <!--a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/><b>eSkarbonka</b> обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).                       
           </a-->
       </div> 
             <!--div class="rezerw"></div-->
@@ -85,15 +85,15 @@ Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem <b>eSkarbonk
             <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14<br/>Украшение #14</b><i>25 PLN</i></div>         
             <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8<br/>Украшение #8</b><i>25 PLN</i></div>
              <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12<br/>Украшение #12</b><i>25 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdobe #2053<br/>Украшение #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
-             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Balwane #2055<br/>Снеговички #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
+             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdoby #2053<br/>Украшение #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
+             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Bałwany #2055<br/>Снеговички #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
              <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm <br/>Елочка #1</b><i>2500 Rub / 122 PLN</i></div--> 
             <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm<br/>Рождественский венок #5</b> <i>147 PLN</i></div>
               <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm<br/>Рождественский венок #2066</b><i>98 PLN</i></div>
               <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm<br/>Рождественский венок #7</b><i>170 PLN</i></div>
              <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm<br/>Рождественское украшение #2062</b><i>147 PLN</i></div>            
              <div class="br"></div>  
-             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdob choinkowych<br/>Набор украшений</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdób choinkowych<br/>Набор украшений</b> <i>25 PLN</i></div>
              <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058<br/>Украшение #2058</b> <i>25 PLN</i></div>
              <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059<br/>Украшение #2059</b> <i>25 PLN</i></div>
              <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065<br/>Украшение #2065</b> <i>25 PLN</i></div>            
