--- a/index.html
+++ b/index.html
@@ -61,54 +61,47 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
 <p><span class="red">!&nbsp;</span>Zanim opłacą Państwo dany towar ogromna prośba o kontakt wosp.moskwa@gmail.com, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</p>
 <p>Projekt działa dzięki pracy wolontariuszy, nie jesteśmy sklepem internetowym z kurierami, ale dołożymy wszelkich starań, żeby przekazać Państwu wszystkie towary w krótkim czasie.</p>
 <p>Opłata za towary przed dostawą za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal)</p>
-          
-          <p><b>RU</b> Наша рождественская ярмарка переехала в интернет. У нас осталось немного чудесных и неповторимых украшений и подарков ручной работы. Дорогие Дедушки Морозы, совместите приятное с полезным!<br/>
-Сердечно приглашаем за онлайн-покупками, оплата через <b>eSkarbonka</b> нашего штаба.<br/>
- Общий доход от&nbsp;продажи будет направлен на&nbsp;благотворительные цели <nobr>30-го финала</nobr> Большого оркестра праздничной помощи, то&nbsp;есть на&nbsp;покупку оборудования для диагностики и лечения офтальмологических заболеваний у детей.
-          <p><b><span class="red">!&nbsp;</span>Перед тем, как оплатить выбранный товар, пожалуйста, свяжитесь с нами <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, <nobr>+7 915 2007192 (Богна),</nobr> <nobr>+7 925 3205824 (Аня),</nobr> чтобы мы могли убедиться, что сможем доставить вам покупку.</b><br/>Этот проект поддерживается волонтерами, мы не являемся полноценным интернет-магазином с курьерами, но приложим все усилия, чтобы продать товары.  <br/>           
-        Оплата покупок через <b>eSkarbonka</b> нашего штаба.  </p> 
               
     <div class="br"></div>
-          <!--a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/><b>eSkarbonka</b> обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).                       
-          </a-->
+          <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard (nie obsługuje karty Mir).<br/><b>eSkarbonka</b> обслуживает все типы платежных систем (Visa и Mastercard, кроме карт МИР).                       
+          </a>
       </div> 
             <!--div class="rezerw"></div-->
-      <h1>Ceny PLN | Цены злотые</h1>
+      <h1>Ceny PLN</h1>
       <!-- Ozdoby choinkowe-->
-        <h2>Ozdoby choinkowe / Елочные игрушки</h2>
+        <h2>Ozdoby choinkowe</h2>
          <div class="goods" id="ozdoby_choinkowe">  
-             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki / Ангелочки</b><i>50 PLN<br/>(4 szt./4 шт.)</i></div>  
-             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki<br/>Матрешки, ~12 cm</b><i>25 PLN<br/>(1 szt./ 1 шт.)</i></div>  
-             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2<br/>Украшение #2</b><i>25 PLN</i></div>
-              <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5<br/>Украшение #5</b><i>25 PLN</i></div>            
-              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4<br/>Украшение #4</b><i>25 PLN</i></div>  
-            <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14<br/>Украшение #14</b><i>25 PLN</i></div>         
-            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8<br/>Украшение #8</b><i>25 PLN</i></div>
-             <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12<br/>Украшение #12</b><i>25 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdoby #2053<br/>Украшение #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
-             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Bałwany #2055<br/>Снеговички #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
-             <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm <br/>Елочка #1</b><i>2500 Rub / 122 PLN</i></div--> 
-            <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm<br/>Рождественский венок #5</b> <i>147 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm<br/>Рождественский венок #2066</b><i>98 PLN</i></div>
-              <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm<br/>Рождественский венок #7</b><i>170 PLN</i></div>
-             <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm<br/>Рождественское украшение #2062</b><i>147 PLN</i></div>            
+             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki</b><i>50 PLN<br/>(4 szt.)</i></div>  
+             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki ~12 cm</b><i>25 PLN<br/>(1 szt.)</i></div>  
+             <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b><i>25 PLN</i></div>
+              <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b><i>25 PLN</i></div>            
+              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b><i>25 PLN</i></div>  
+            <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14</b><i>25 PLN</i></div>         
+            <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8</b><i>25 PLN</i></div>
+             <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12</b><i>25 PLN</i></div>
+             <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdoby #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
+             <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Bałwany #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
+             <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm</b><i>2500 Rub / 122 PLN</i></div--> 
+            <div class="book-01 book-02"><img src="img/ania_01_l.jpg"><b>Stroik #5 D=~50cm</b> <i>147 PLN</i></div>
+              <div class="book-01 book-02"><img src="img/stroik_2066_l.jpg"><b>Stroik #2066 D=~50cm</b><i>98 PLN</i></div>
+              <div class="book-01 book-02"><img src="img/ania_05_l.jpg"><b>Stroik #7 D=~50cm</b><i>170 PLN</i></div>
+             <div class="book-01 book-02"><img src="img/stroik_2062_l.jpg"><b>Stroik #2062 50x30cm</b><i>147 PLN</i></div>            
              <div class="br"></div>  
-             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdób choinkowych<br/>Набор украшений</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058<br/>Украшение #2058</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059<br/>Украшение #2059</b> <i>25 PLN</i></div>
-             <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065<br/>Украшение #2065</b> <i>25 PLN</i></div>            
+             <div class="book-01"><img src="img/ozdobe_2057.jpg"><b>Zestaw<br/>ozdób choinkowych</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/ozdoba_2058.jpg"><b>Ozdoba #2058</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/ozdoba_2059.jpg"><b>Ozdoba #2059</b> <i>25 PLN</i></div>
+             <div class="book-01"><img src="img/pilka_2065.jpg"><b>Ozdoba #2065</b> <i>25 PLN</i></div>            
              <div class="br"></div>             
    </div>
         <!--/Ozdoby choinkowe-->      
      <!-- handmade-->
       <h2>Handmade</h2>
         <div class="goods" id="handmade"> 
-        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1<br/>Единорог #1</b> <i>Broszka / Брошка, ~3 cm<br/>25 PLN</i></div>
+        <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka ~3 cm<br/>25 PLN</i></div>
         <!--div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div-->
-        <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3<br/>Единорог #3</b> <i>Broszka / Брошка, ~3 cm <br/>25 PLN</i></div>     
-       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt. / подставки под горячее, 4 шт.</b> <i>35 PLN</i></div>
-         <!--div class="book-01 book-02"><img src="img/korale_l.jpg"><b>Korale z tkaniny, ~25-30 cm<br/>Бусы из ткани</b> <i>25 PLN</i></div-->   
-        <div class="br"></div>             
+        <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3</b> <i>Broszka ~3 cm <br/>25 PLN</i></div>     
+       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt., 4 шт.</b> <i>35 PLN</i></div>
+          <div class="br"></div>             
    </div>
         <!--/handmade-->
         <!-- contacts-->
