--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
       <!-- Ozdoby choinkowe-->
         <h2>Ozdoby choinkowe</h2>
          <div class="goods" id="ozdoby_choinkowe">  
-             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki</b><i>50 PLN<br/>(4 szt.)</i></div>  
-             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki ~12 cm</b><i>25 PLN<br/>(1 szt.)</i></div>  
+             <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki</b><i>50 PLN (4 szt.)</i></div>  
+             <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki ~12 cm</b><i>25 PLN (1 szt.)</i></div>  
              <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b><i>25 PLN</i></div>
               <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b><i>25 PLN</i></div>            
               <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b><i>25 PLN</i></div>  
