--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
      <div class="anonce">Przedstawiamy dzieła moskiewskich Polek, przygotowane z miłością dla wsparcia celów 30 Finału: niepowtarzalne ręcznie robione ozdoby świąteczne i prezenty. Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;</span>Zanim opłacą Państwo dany towar ogromna prośba o kontakt <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</p>
+<p><span class="red">!&nbsp;</span><b>Zanim opłacą Państwo dany towar ogromna prośba o kontakt <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</b></p>
 <p>Projekt działa dzięki pracy wolontariuszy, nie jesteśmy sklepem internetowym z kurierami, ale dołożymy wszelkich starań, żeby przekazać Państwu wszystkie towary w krótkim czasie.</p>
 <p>Opłata za towary przed dostawą za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal)</p>
               
