--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	
-	a.eskarbonka {background: url(img/e_skarbonka_ak_w.png) no-repeat top left; padding-left:320px; padding-top:10px; margin:25px 0px 1px 0px; height: 72px; display: inline-block; transition:0.5s;}
+	a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-left:210px; padding-top:10px; margin:25px 0px 1px 0px; height: 63px; display: block; transition:0.5s;}
 }
             
          @media only screen and (max-width: 320px) {
@@ -42,7 +42,7 @@
 	.fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; margin-top:5px; clear:both;}
         .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
-	 a.eskarbonka {background: url(img/e_skarbonka_ak_w.png) no-repeat top left; padding-left:320px; padding-top:10px; margin:25px 0px 1px 0px; height: 72px; display: inline-block; transition:0.5s;}
+	 a.eskarbonka {background: url(img/e_skarbonka_ak_w.png) no-repeat top left; padding-left:210px; padding-top:10px; margin:25px 0px 1px 0px; height: 63px; display: inline-block; transition:0.5s;}
             }
         </style>
 	    
