--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png); height:155px; }
          .goods {max-width:320px;}    
-	  .book-01 { font-size:12px; width:150px; height:250px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	  .book-01 { font-size:12px; width:150px; height:220px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:5px auto; height:150px;}
 	.fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; margin-top:5px; clear:both;}
@@ -102,7 +102,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
         <div class="book-01"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka ~3 cm<br/>25 PLN</i></div>
         <!--div class="book-01"><img src="img/jr_02.jpg"><b>Jednorożec #2</b> <i>Broszka, ~3-4 cm</i></div-->
         <div class="book-01"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3</b> <i>Broszka ~3 cm <br/>25 PLN</i></div>     
-       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt., 4 шт.</b> <i>35 PLN</i></div>
+       <div class="book-01"><img src="img/podkladki_01.jpg"><b>Podkładki, zestaw 4 szt.</b> <i>35 PLN</i></div>
           <div class="br"></div>             
    </div>
         <!--/handmade-->
