--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	
-	a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-left:210px; padding-top:10px; margin:25px 0px 1px 0px; height: 63px; display: block; transition:0.5s;}
+	a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-top:73px; margin:25px 0px 1px 0px; height: 100px; display: block; transition:0.5s;}
 }
             
          @media only screen and (max-width: 320px) {
@@ -37,12 +37,12 @@
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png); height:155px; }
          .goods {max-width:320px;}    
-	  .book-01 { font-size:12px; width:150px; height:210px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #d00; float:left; display:inline-block; background:#fff; }
+	  .book-01 { font-size:12px; width:150px; height:210px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:5px auto; height:150px;}
 	.fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; margin-top:5px; clear:both;}
         .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
-	 a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-left:210px; padding-top:0px; margin:15px 0px 1px 0px; height: 63px; display: inline-block; transition:0.5s;}
+	 a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-top:73px; margin:15px 0px 1px 0px; height:100px; display: block; transition:0.5s;}
             }
         </style>
 	    
