--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
 <p>Opłata za towary przed dostawą za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal)</p>
               
     <div class="br"></div>
-          <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard.                       
+          <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard                      
           </a>
       </div> 
             <!--div class="rezerw"></div-->
