--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         @media only screen and (min-width : 320px) and (max-width : 480px) {
 		.topmenu {font-size:14px; font-family:Arial Narrow, sans-serif; text-align:left; text-transform:uppercase; color:#444; margin:auto; text-align:left; padding-top:12px; max-width:480px;  padding-bottom: 10px;}
             .main-container {margin:auto; padding:5px; text-align:center; min-width:320px; max-width:480px;}
-            .banner {background-image: url(img/1122_480.png) !important; height:185px; }
+            .banner {background-image: url(img/1122_480_n.png) !important; height:185px; }
             .goods {min-width:320px; max-width:480px;}
-	 .book-01 { font-size:12px; width:150px; height:250px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	 .book-01 { font-size:12px; width:150px; height:240px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:5px auto; height:150px;}
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	
-	a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-left:0px; padding-top:73px; margin:25px 0px 1px 0px; iheight: 100px; display: block; transition:0.5s;}
+	a.eskarbonka {background: url(img/e_skarbonka_ak_n.png) no-repeat top left; padding-left:0px; padding-top:73px; margin:15px 0px 1px 0px; iheight: 100px; display: block; transition:0.5s;}
 }
             
          @media only screen and (max-width: 320px) {
