--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    <!-- /top menu-->
      <!-- main container -->   
   <div class="main-container">
-     <div class="anonce">Przedstawiamy dzieła moskiewskich Polek, przygotowane z miłością dla wsparcia celów 30 Finału: niepowtarzalne ręcznie robione ozdoby świąteczne i prezenty. Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!
+     <div class="anonce">Przedstawiamy dzieła moskiewskich Polek, przygotowane z miłością dla wsparcia celów 30 Finału: niepowtarzalne ręcznie robione ozdoby świąteczne i prezenty. <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
 <p><span class="red">!&nbsp;</span><b>Zanim opłacą Państwo dany towar ogromna prośba o kontakt <a href="mailto:wosp.moskwa@gmail.com">wosp.moskwa@gmail.com</a>, +7 915 2007192 (Bogna), +7 925 3205824 (Ania) — musimy ustalić, czy jesteśmy w stanie dostarczyć państwu zakup.</b></p>
