--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             .goods {min-width:320px; max-width:480px;}
 	 .book-01 { font-size:12px; width:150px; height:230px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:5px auto; height:150px;}
+	.book-01 i {font-size:12px;}
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	
@@ -37,8 +38,9 @@
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png) !important; height:155px; }
          .goods {max-width:320px;}    
-	  .book-01 { font-size:12px; width:150px; height:200px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	  .book-01 { font-size:12px; width:150px; height:215px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
 	.book-01 img {margin:5px auto; height:150px;}
+	.book-01 i {font-size:12px;}
 	.fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; margin-top:5px; clear:both;}
         .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
