--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
              <div class="book-01 book-02"><img src="img/aniols.jpg"><b>Aniołki</b><i>50 PLN (4 szt.)</i></div>  
              <div class="book-01"><img src="img/matrioszki_02.jpg" title="Matrioszki"><b>Matrioszki ~12 cm</b><i>25 PLN (1 szt.)</i></div>  
              <div class="book-01"><img src="img/choinka_02.jpg"><b>Ozdoba #2</b><i>25 PLN</i></div>
-              <div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b><i>25 PLN</i></div>            
-              <div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b><i>25 PLN</i></div>  
+              <!--div class="book-01"><img src="img/choinka_05.jpg"><b>Ozdoba #5</b><i>25 PLN</i></div-->            
+              <!--div class="book-01"><img src="img/choinka_04.jpg"><b>Ozdoba #4</b><i>25 PLN</i></div-->  
             <div class="book-01"><img src="img/choinka_014.jpg"><b>Ozdoba #14</b><i>25 PLN</i></div>         
             <div class="book-01"><img src="img/choinka_08.jpg"><b>Ozdoba #8</b><i>25 PLN</i></div>
-             <div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12</b><i>25 PLN</i></div>
+             <!--div class="book-01"><img src="img/choinka_012.jpg"><b>Ozdoba #12</b><i>25 PLN</i></div-->
              <div class="book-01 book-02"><img src="img/ozdobe_2053_l.jpg"><b>Ozdoby #2053</b> <i>25 PLN (1 szt.)</i><br/><i>50 PLN (4 szt.)</i></div> 
              <div class="book-01 book-02"><img src="img/balwan_2055_l.jpg"><b>Bałwany #2055</b> <i>25 PLN (1 szt.)</i><br/><i>40 PLN (2 szt.)</i></div>
              <!--div class="book-01 book-02"><img src="img/choinka_new_01.jpg"><b>Choinka #1 H=~50 cm</b><i>2500 Rub / 122 PLN</i></div--> 
